// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`roseParallel 1`] = `
{
  "annotation": {},
  "chartType": "roseParallel",
  "config": {
    "roseParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "roseParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_Angle__": "2019-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jan-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jan-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 210000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "profit": 210000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Feb-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Feb-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 220000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "profit": 220000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Mar-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Mar-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 230000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "profit": 230000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Apr-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Apr-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 340000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "profit": 340000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "May-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "May-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 450000,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "profit": 450000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jun-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2019-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jun-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 560000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "profit": 560000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "2020-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jan-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jan-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 110000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "profit": 110000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Feb-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Feb-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 320000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "profit": 320000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Mar-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Mar-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 430000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "profit": 430000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Apr-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Apr-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 540000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "profit": 540000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "May-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "May-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 250000,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "profit": 250000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Sales",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jun-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "2020-Profit",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jun-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 610000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "profit": 610000,
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "roseParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "Profit-profit": "Profit",
          "Sales-sales": "Sales",
        },
        "colorItems": [
          "Sales-sales",
          "Profit-profit",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "year",
      "__MeaName__",
    ],
    "color": [
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
      "month",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "Sales",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "Profit",
      "autoFormat": true,
      "id": "profit",
    },
  ],
}
`;

exports[`roseParallel 2`] = `
{
  "angleField": [
    "__Dim_Angle__",
    "__Dim_Detail__",
  ],
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "label": {
        "visible": true,
      },
      "nice": true,
      "orient": "radius",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "nice": true,
      "orient": "angle",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "Sales-sales",
      "Profit-profit",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "roseParallel",
    "values": [
      {
        "__Dim_Angle__": "2019-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jan-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jan-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Feb-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Feb-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Mar-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Mar-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Apr-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Apr-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "May-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "May-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jun-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2019-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jun-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "2020-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jan-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jan-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Feb-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Feb-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Mar-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Mar-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Apr-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Apr-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "May-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "May-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Sales",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jun-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "2020-Profit",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jun-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
    ],
  },
  "innerRadius": 0,
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.9,
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "rose": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "#ffffff",
    },
  },
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": undefined,
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "rose",
  "valueField": "__MeaValue__",
}
`;
